tests/bonsai/error/option-dereference1.bonsai
func use_option(i : option[i32], j: option[i32]) -> i32 {
    if i {
        if j { 
            k = i;     // LEGAL
            return j;  // LEGAL
        }
    } else {
        return i;      // ILLEGAL
    }
    return 42;
}
